--- a/src/global.css
+++ b/src/global.css
@@ -1,8 +1,14 @@
 @import "tailwindcss";
 
 :root {
-    --color-blue-500: #3b82f6;
-    --color-gray-100: #f3f4f6;
-    --color-gray-300: #d1d5db;
-  }
-  
+  --color-red-500: #ef4444;
+  --color-red-700: #b91c1c;
+  --color-blue-500: #3b82f6;
+  --color-blue-600: #2563eb;
+  --color-blue-700: #1d4ed8;
+  --color-gray-50:  #f9fafb;
+  --color-gray-100: #f3f4f6;
+  --color-gray-300: #d1d5db;
+  --color-gray-600: #4b5563;
+  --color-gray-700: #374151;
+}
